@@ -18,7 +18,7 @@ public class Client extends WebSocketClient {
     }
 
     private void startClientThread() {
-        Thread thread = new Thread(() -> {
+        Thread thread = Thread.startVirtualThread(() -> {
             while (isConnected) {
                 if (!scanner.hasNextLine())
                     continue;
